<resources>
    <string name="app_name">WaZo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">WaZo</string>
    <string name="menu_home">Home</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_settings">Settings</string>
    <string name="about">About</string>
    <string name="my_dictionary">My Library</string>
    <string name="version">Version: 1.0</string>

    <string name="complete_form">You need to complete the form</string>



    <!--language setting label-->
    <string name="pref_lang_label_hau_yor">Hausa - Yoruba</string>
    <string name="pref_lang_label_eng_yor">English - Yoruba</string>

    <!--language settings value-->
    <string name="pref_lang_hau_yor_value">hausa_yoruba</string>
    <string name="pref_lang_eng_yor_value">english_yoruba</string>

    <string name="pref_language_label">Language Choice</string>
    <string name="pref_language_key">language</string>


    <string name="action_search">Search</string>
    <string name="rate_app">Rate App</string>
    <string name="others">Others</string>
    <string name="quiz">Quiz</string>
    <string name="flash_card">Flash Cards</string>
    <string name="question_text">What is Yoruba name for:\n%1$s?</string>
    <string name="answer_correct">You are correct</string>
    <string name="answer_wrong">You are wrong! The right answer is</string>

</resources>
