<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/menu_favourites" />
        <item
            android:id="@+id/nav_dico"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/my_dictionary" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_brain_storm_skill"
            android:title="@string/quiz" />
        <item
            android:id="@+id/nav_card"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/flash_card" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Settings" />


    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_rate_app"
                android:icon="@drawable/ic_star_black_24dp"
                android:title="@string/rate_app" />
        </menu>
    </item>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about" />

            <item
                android:id="@+id/nav_developer"
                android:icon="@drawable/ic_developer"
                android:title="About Developer" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit"
                android:title="Exit App"
                android:visible="false"/>
        </menu>
    </item>

</menu>
